--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "devDependencies": {
         "autoprefixer": "^10.4.17",
         "axios": "^1.6.4",
+        "laravel-echo": "^1.15.3",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.35",
+        "pusher-js": "^8.3.0",
         "tailwindcss": "^3.4.1",
         "vite": "^5.0.0"
     }
